--- a/arim.ini
+++ b/arim.ini
@@ -76,6 +76,10 @@ files-dir = files/
 # add-files-dir = dir1/
 # add-files-dir = dir2/sub_dir/
 # add-files-dir = dir3/*
+# access controlled shared files directory, path relative to files-dir
+# ac-files-dir = dir1/
+# ac-files-dir = dir2/sub_dir/
+# ac-files-dir = dir3/*
 # max-file-size can be set no larger than 16384
 max-file-size = 4096
 max-msg-days = 0
