--- a/arim.ini
+++ b/arim.ini
@@ -100,6 +100,11 @@ show-titles = TRUE
 mon-timestamp = TRUE
 color-code = TRUE
 utc-time = TRUE
+# 'color-code' must be TRUE for themes to work. The built-in themes
+# DARK and LIGHT are always available. Additional themes may be defined
+# in the 'arim-themes' file. Run 'man 5 arim' for further information
+# about defining custom themes in this file.
+theme = DARK
 # More info at: http://www.whitemesa.net/arim/arim.html#conf
 # or in the arim-help.pdf file included in this distribution.
 
