--- a/arim.ini
+++ b/arim.ini
@@ -13,7 +13,7 @@ netcall = QST
 gridsq = FN31
 name = TNC-1
 info = Info: [your info text here]
-fecmode = 4FSK.200.50S
+fecmode = 4FSK.500.50
 squelch = 5
 busydet = 5
 leader = 240
@@ -26,7 +26,7 @@ listen = TRUE
 #tnc-init-cmd = DRIVELEVEL 100
 arq-sendcr = TRUE
 arq-timeout = 120
-arq-bandwidth = 500MAX
+arq-bandwidth = 500
 btime = 0
 reset-btime-on-tx = FALSE
 # Second tnc (you can define up to 10).
@@ -57,7 +57,7 @@ listen = TRUE
 #tnc-init-cmd = DRIVELEVEL 100
 arq-sendcr = TRUE
 arq-timeout = 120
-arq-bandwidth = 2000MAX
+arq-bandwidth = 200
 btime = 0
 reset-btime-on-tx = FALSE
 # In this section mycall is to be the call sign you want to
