--- a/arim.ini
+++ b/arim.ini
@@ -27,6 +27,7 @@ listen = TRUE
 arq-sendcr = TRUE
 arq-timeout = 120
 arq-bandwidth = 500
+arq-negotiate-bw = TRUE
 btime = 0
 reset-btime-on-tx = FALSE
 # Second tnc (you can define up to 10).
