--- a/arim.ini
+++ b/arim.ini
@@ -6,7 +6,7 @@
 # More info at: http://www.whitemesa.net/arim/arim.html#conf
 # or in the arim-help.pdf file included in this distribution.
 [tnc]
-ipaddr = localhost
+ipaddr = 127.0.0.1
 port = 8515
 mycall = NOCALL
 netcall = QST
@@ -23,23 +23,23 @@ listen = TRUE
 # to the TNC when you ATTACH. Limit is 32 'tnc-init-cmd' lines,
 # of max length 128 chars. Use this only for TNC commands not
 # managed by ARIM, such as radio control commands.
-#tnc-init-cmd = DRIVELEVEL 100
+#tnc-init-cmd = LEADER 300
 arq-sendcr = TRUE
 arq-timeout = 120
 arq-bandwidth = 500
 arq-negotiate-bw = TRUE
 btime = 0
 reset-btime-on-tx = FALSE
-# Second tnc (you can define up to 10).
-# If this tnc is on the same host as the first tnc then
-# it must be configured to listen on a different port number.
-# In this example a static IP is given which points to another
-# host on the local area network, so the port number is also
-# 8515, the standard ARDOP port.
+# Second tnc (you can define up to 10) - In this example a
+# serial port is defined for a TNC-Pi9K6 TNC on a Raspberry Pi
+# host, running ARDOP or ARDOP 2. Normally the serial device
+# is /dev/serial0 and the baud rate is 115200. The port interface
+# must be declared as "serial" (TCP is the default).
 # This will be TNC number 2 since it's second in the file.
 [tnc]
-ipaddr = 192.168.1.20
-port = 8515
+interface = serial
+serial-baudrate = 115200
+serial-port = /dev/serial0
 mycall = NOCALL
 netcall = QST
 gridsq = FN31
@@ -55,15 +55,16 @@ listen = TRUE
 # to the TNC when you ATTACH. Limit is 32 'tnc-init-cmd' lines,
 # of max length 128 chars. Use this only for TNC commands not
 # managed by ARIM, such as radio control commands.
-#tnc-init-cmd = DRIVELEVEL 100
+tnc-init-cmd = TXLEVEL 400
+tnc-init-cmd = LOGLEVEL 6
 arq-sendcr = TRUE
 arq-timeout = 120
 arq-bandwidth = 200
 btime = 0
 reset-btime-on-tx = FALSE
-# In this section mycall is to be the call sign you want to
-# use as the From: call in messages sent to other stations.
 [arim]
+# In this section, mycall is the call sign you want to use as
+# the From: call in messages sent to other stations.
 mycall = NOCALL
 send-repeats = 0
 ack-timeout = 30
@@ -87,15 +88,22 @@ max-msg-days = 0
 # dynamic files are defined as alias:command
 dynamic-file = date:date
 #dynamic-file = spwxfc:python forecast.py
+[log]
 # Set debug-log to TRUE to turn on the debug log. Normally
 # set to FALSE unless you need to diagnose a problem.
-[log]
 debug-log = FALSE
+# Set tncpi9k6-log to TRUE to turn on the TNC-Pi9K6 debug log. Normally
+# set to FALSE unless you need to diagnose a problem. Note: this log gets
+# big fast with the default verbosity level. To limit the log size, you
+# can change the verbosity level with a LOGLEVEL command to the TNC when
+# the port is initialized. Do this with a tnc-init-cmd line in the [port]
+# section. Example: tnc-init-cmd = LOGLEVEL 6 (7 is the most verbose).
+tncpi9k6-log = FALSE
+[ui]
 # Set last-heard-time to control format of timestamps in the Calls Heard
 # list and Ping History view. Set to CLOCK for last time heard in HH:MM:SS
 # format, or to ELAPSED for elapsed time in DD:HH:MM format. Set utc-time
 # to TRUE for UTC or FALSE for local time.
-[ui]
 last-time-heard = CLOCK
 show-titles = TRUE
 mon-timestamp = TRUE
