--- a/arim.ini
+++ b/arim.ini
@@ -1,3 +1,7 @@
+# Example configuration file.
+# More info at: http://www.whitemesa.net/arim/arim.html#conf
+# or in the arim-help.pdf file included in this distribution.
+[tnc]
 # First tnc - set ipaddr to point to the host where the
 # tnc is running, and set the port number as needed along
 # with mycall and your grid square. The tnc name will
@@ -5,7 +9,6 @@
 # This will be TNC number 1 since it's first in the file.
 # More info at: http://www.whitemesa.net/arim/arim.html#conf
 # or in the arim-help.pdf file included in this distribution.
-[tnc]
 ipaddr = 127.0.0.1
 port = 8515
 mycall = NOCALL
@@ -19,7 +22,7 @@ busydet = 5
 leader = 240
 enpingack = TRUE
 listen = TRUE
-# use 'tnc-init-cmd' to send arbitrary initialization commands
+# Use 'tnc-init-cmd' to send arbitrary initialization commands
 # to the TNC when you ATTACH. Limit is 32 'tnc-init-cmd' lines,
 # of max length 128 chars. Use this only for TNC commands not
 # managed by ARIM, such as radio control commands.
@@ -30,13 +33,18 @@ arq-bandwidth = 500
 arq-negotiate-bw = TRUE
 btime = 0
 reset-btime-on-tx = FALSE
+# Logging output can be sent to a directory specific to
+# this TNC instead of the default location.
+#log-dir = tnc1-log
+#traffic-log = TRUE
+#debug-log = TRUE
+[tnc]
 # Second tnc (you can define up to 10) - In this example a
 # serial port is defined for a TNC-Pi9K6 TNC on a Raspberry Pi
 # host, running ARDOP or ARDOP 2. Normally the serial device
 # is /dev/serial0 and the baud rate is 115200. The port interface
 # must be declared as "serial" (TCP is the default).
 # This will be TNC number 2 since it's second in the file.
-[tnc]
 interface = serial
 serial-baudrate = 115200
 serial-port = /dev/serial0
@@ -51,7 +59,7 @@ busydet = 5
 leader = 240
 enpingack = TRUE
 listen = TRUE
-# use 'tnc-init-cmd' to send arbitrary initialization commands
+# Use 'tnc-init-cmd' to send arbitrary initialization commands
 # to the TNC when you ATTACH. Limit is 32 'tnc-init-cmd' lines,
 # of max length 128 chars. Use this only for TNC commands not
 # managed by ARIM, such as radio control commands.
@@ -62,6 +70,11 @@ arq-timeout = 120
 arq-bandwidth = 200
 btime = 0
 reset-btime-on-tx = FALSE
+# Logging output can be sent to a directory specific to
+# this TNC instead of the default location.
+#log-dir = tnc2-log
+#traffic-log = TRUE
+#debug-log = TRUE
 [arim]
 # In this section, mycall is the call sign you want to use as
 # the From: call in messages sent to other stations.
@@ -72,6 +85,8 @@ fecmode-downshift = FALSE
 frame-timeout = 30
 pilot-ping = 0
 pilot-ping-thr = 60
+max-msg-days = 0
+msg-trace-en = FALSE
 # path to shared files root directory, absolute or relative
 files-dir = files/
 # additional shared files directory, path relative to files-dir
@@ -84,8 +99,6 @@ files-dir = files/
 # ac-files-dir = dir3/*
 # max-file-size can be set no larger than 16384
 max-file-size = 4096
-max-msg-days = 0
-msg-trace-en = FALSE
 # dynamic files are defined as alias:command
 dynamic-file = date:date
 #dynamic-file = spwxfc:python forecast.py
